<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:icon="@drawable/ic_sort_24dp"
    android:orderInCategory="100"
    android:title="@string/sort_title"
    app:showAsAction="always">
    <menu>
      <group android:checkableBehavior="single">
        <item
          android:id="@+id/menu_filter_artist_name"
          android:checked="true"
          android:title="@string/artist_name_filter" />
        <item
          android:id="@+id/menu_filter_album_name"
          android:title="@string/album_title_filter" />
        <item
          android:id="@+id/menu_filter_genre_name"
          android:title="@string/genre_name_filter" />
        <item
          android:id="@+id/menu_filter_release_year"
          android:title="@string/release_year_filter" />
      </group>
    </menu>
  </item>
</menu>