<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?android:colorBackground"
  android:orientation="vertical">
  <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
      android:id="@+id/album_cover"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="64dp"
      android:adjustViewBounds="true"
      android:background="?android:colorAccent"
      android:contentDescription="@string/album_cover_content_description"
      android:src="@drawable/ic_album_inverse_24dp" />
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorBlackTransparent">
      <ImageButton
        android:id="@+id/back_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/button_back_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_back_inverse_24dp" />
    </RelativeLayout>
  </RelativeLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?colorPrimary"
    android:elevation="3dp"
    android:orientation="vertical">
    <TextView
      android:id="@+id/album_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:fontFamily="sans-serif-medium"
      android:maxLines="2"
      android:text="@string/unknown_album_title_placeholder"
      android:textColor="?android:textColorPrimaryInverse"
      android:textSize="20sp" />
    <TextView
      android:id="@+id/album_release_year"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-regular"
      android:text="@string/unknown_release_year_placeholder"
      android:textColor="?android:textColorPrimaryInverse"
      android:textSize="16sp" />
  </LinearLayout>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <LinearLayout
        android:id="@+id/album_same_artist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/artist_label"
          android:textSize="16sp" />
        <TextView
          android:id="@+id/artist_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:text="@string/unknown_artist_placeholder"
          android:textSize="16sp" />
      </LinearLayout>
      <LinearLayout
        android:id="@+id/album_same_genre_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/genre_label"
          android:textSize="16sp" />
        <TextView
          android:id="@+id/genre_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:text="@string/unknown_genre_placeholder"
          android:textSize="16sp" />
      </LinearLayout>
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:orientation="horizontal">
          <Button
            android:id="@+id/button_edit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/button_edit_label" />
          <Button
            android:id="@+id/button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/button_delete_label"
            android:textColor="@color/colorDelete" />
        </LinearLayout>
      </RelativeLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>