<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="4dp">
  <RelativeLayout
    android:id="@+id/album_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_toStartOf="@+id/add_album_button_container"
      android:elevation="3dp"
      android:clipToPadding="false"
      android:orientation="horizontal">
      <ImageView
        android:id="@+id/album_card_cover"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:padding="24dp"
        android:background="?android:colorAccent"
        android:contentDescription="@string/album_cover_content_description"
        android:src="@drawable/ic_album_inverse_24dp" />
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
          android:id="@+id/album_card_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ellipsize="marquee"
          android:fontFamily="sans-serif-medium"
          android:maxLines="1"
          android:text="@string/unknown_album_title_placeholder"
          android:textColor="?android:textColorPrimary"
          android:textSize="20sp" />
        <TextView
          android:id="@+id/album_card_artist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:text="@string/unknown_artist_placeholder"
          android:textColor="?android:textColorPrimary"
          android:textSize="15sp" />
        <TextView
          android:id="@+id/album_card_release_year"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:textColor="?android:textColorSecondary"
          android:textSize="15sp" />
      </LinearLayout>
    </LinearLayout>
    <RelativeLayout
      android:id="@+id/add_album_button_container"
      android:layout_width="46dp"
      android:layout_height="92dp"
      android:layout_alignParentEnd="true"
      android:background="?colorAccent">
      <ImageView
        android:id="@+id/add_album_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/add_album_content_description"
        android:src="@drawable/ic_add_inverse_24dp" />
    </RelativeLayout>
  </RelativeLayout>

</android.support.v7.widget.CardView>