<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <SurfaceView
    android:id="@+id/camera_view"
    android:layout_width="match_parent"
    android:layout_height="192dp" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?android:colorPrimary"
    android:elevation="3dp">
    <TextView
      android:id="@+id/barcode_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/barcode_label"
      android:textColor="?android:textColorPrimaryInverse"
      android:textSize="20sp" />
    <TextView
      android:id="@+id/barcode_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@+id/barcode_label"
      android:text="@string/barcode_none_placeholder"
      android:textColor="?android:textColorSecondaryInverse"
      android:textSize="20sp" />
  </RelativeLayout>
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
      android:id="@+id/scan_barcode_placeholder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/scan_barcode_placeholder" />
    <ProgressBar
      android:id="@+id/preloader"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:visibility="gone" />
    <include
      android:id="@+id/add_album_card"
      layout="@layout/fragment_add_album_card"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:visibility="gone" />
  </RelativeLayout>

</LinearLayout>