<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <TextView
    android:id="@+id/album_category_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginStart="16dp"
    android:text=""
    android:textSize="16sp"
    android:visibility="gone" />
  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">
    <LinearLayout
      android:id="@+id/album_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:orientation="horizontal"
      app:background="?android:attr/selectableItemBackground">
      <ImageView
        android:id="@+id/album_card_cover"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:padding="24dp"
        android:background="?android:colorAccent"
        android:contentDescription="@string/album_cover_content_description"
        android:src="@drawable/ic_album_inverse_24dp" />
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
          android:id="@+id/album_card_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ellipsize="marquee"
          android:fontFamily="sans-serif-medium"
          android:maxLines="1"
          android:text="@string/unknown_album_title_placeholder"
          android:textColor="?android:textColorPrimary"
          android:textSize="20sp" />
        <TextView
          android:id="@+id/album_card_artist"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:text="@string/unknown_artist_placeholder"
          android:textColor="?android:textColorPrimary"
          android:textSize="15sp" />
        <TextView
          android:id="@+id/album_card_release_year"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:textColor="?android:textColorSecondary"
          android:textSize="15sp" />
        <TextView
          android:id="@+id/album_card_genre"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-regular"
          android:textColor="?android:textColorSecondary"
          android:textSize="15sp" />
      </LinearLayout>
    </LinearLayout>

  </android.support.v7.widget.CardView>
</LinearLayout>
